fixed nav overflowing

--- a/components/Home/Hero/Hero.module.scss
+++ b/components/Home/Hero/Hero.module.scss
@@ -55,6 +55,8 @@
 	display: block;
 	width: calc(129% + 1.3px);
 	height: 150px;
+}
+.shapeFill {
 	fill: #ffffff;
 }
 
