--- a/components/layout/nav/Nav.module.scss
+++ b/components/layout/nav/Nav.module.scss
@@ -1,5 +1,6 @@
 .nav {
-	overflow: hidden;
+	position: fixed;
+	width: 100%;
 	background-color: var(--main-color-darker);
 	height: 10vh;
 	display: flex;
